--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,14 @@ name = "bbo-bench"
 readme = "README.md"
 requires-python = ">=3.10"
 
+[build-system]
+requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.dynamic]
+dependencies = {file = ["requirements.in"]}
+optional-dependencies = {dev = {file = ["requirements-dev.in"]}}
+
 [tool.ruff]
 ignore-init-module-imports = true
 line-length = 79
@@ -23,7 +31,6 @@ ignore = [
     "E741",  # ambiguous-variable-name
 ]
 
-
 [tool.ruff.lint]
 extend-select = ["I"]
 
@@ -31,7 +38,6 @@ extend-select = ["I"]
 "__init__.py" = [
     "F401", # MODULE IMPORTED BUT UNUSED
 ]
-
 
 [tool.setuptools_scm]
 search_parent_directories = true
