--- a/config/hydra/benchmark_optimizer.yaml
+++ b/config/hydra/benchmark_optimizer.yaml
@@ -7,9 +7,9 @@ defaults:
 random_seed: 0
 log_interval: 1
 num_opt_steps: 5
-wandb_host: "https://genentech.wandb.io"
+wandb_host: "https://api.wandb.ai"
 wandb_mode: online
-output_dir: "/data/dingf7/bbo_bench/"
+output_dir: "/data/bbo_bench_output"
 project_name: bbo_bench_test
 exp_name: hyperparameter_search
 job_name: ???
