--- a/config/hydra/optimizer/lambo2.yaml
+++ b/config/hydra/optimizer/lambo2.yaml
@@ -16,12 +16,12 @@ feature_dim: 128
 embed_dim: 32
 kernel_size: 5
 batch_size: 128
-max_epochs: 16
+max_epochs: 50
 data_dir: ./.cache
 wandb_mode: offline
-random_seed: 42
-num_steps: 1
-num_mutations_per_step: 1
+random_seed: ${random_seed}
+num_steps: 2
+num_mutations_per_step: 2
 max_sequence_length: 256
 num_samples: ${.batch_size}
 allow_length_change: false
